# PostureCorrection

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/: __init__.py  analyzer.py  app.py  config.py  constants.py  detector.py  main.py  models.py  renderer.py  system.py  utils.py
src/core/: __init__.py  base_analyzer.py  base_config.py  base_detector.py
src/ui/: __init__.py  control_panel.py  main_window.py  video_widget.py
src/utils/: __init__.py  feedback.py  helpers.py  renderer.py  text_renderer.py  video.py
